@@ -23,8 +23,8 @@ English | <a href="unreal32docs.de.html">German</a><br><br>
 <div align="center"><b><font size="7">UnrealIRCd</font></b><br>
   <font size="4"><a href="http://www.unrealircd.com">http://www.unrealircd.com</a></font><br>
   <font size="4">Version: 3.2</font><br>
-  <b>Current Version:</b> 3.2 *CVS*<br>
-  <b>Last doc update:</b> 2004-04-23</div>
+  <b>Current Version:</b> 3.2<br>
+  <b>Last doc update:</b> 2004-04-24</div>
 <br>
   <b>Head Coders:</b> Stskeeps / codemastr / Syzop / Luke<br>
   <b>Contributors:</b> McSkaf / Zogg / NiQuiL / assyrian / chasm / DrBin / llthangel / Griever / nighthawk<br>
@@ -188,8 +188,8 @@ Windows:<br>
 <p><b>Installation Instructions</b><br>
 Linux:<br>
 <ol>
-<li>gunzip -d Unreal3.2-pre1.tar.gz
-<li>tar xvf Unreal3.2-pre1.tar
+<li>gunzip -d Unreal3.2.tar.gz
+<li>tar xvf Unreal3.2.tar
 <li>cd Unreal3.2
 <li>./Config
 <li>Answer these questions to the best of your knowledge. Generally if your not 
